Add the debug toolbar

--- a/project/app/templates/welcome.html
+++ b/project/app/templates/welcome.html
@@ -1,11 +1,13 @@
 <html>
-  <p>
-  Welcome to the bridge club.
-  </p>
+  <body>
+    <p>
+      Welcome to the bridge club.
+    </p>
 
-  <p>
-  My Samoyed is <em>really</em> hairy.
-  </p>
+    <p>
+      My Samoyed is <em>really</em> hairy.
+    </p>
 
-  Some day you'll be able to login, and sign up.
+    Some day you'll be able to login, and sign up.
+  </body>
 </html>
