Add a login page, based on the example in the docs
... as well as the "profile" page that it seems to want

--- a/project/app/templates/welcome.html
+++ b/project/app/templates/welcome.html
@@ -8,6 +8,6 @@
       My Samoyed is <em>really</em> hairy.
     </p>
 
-    Some day you'll be able to login, and sign up.
+    Some day you'll be able to <a href="{% url 'login' %}">login</a>, and sign up.
   </body>
 </html>
