Make everything more template-y

--- a/project/app/templates/profile.html
+++ b/project/app/templates/profile.html
@@ -1,6 +1,7 @@
-<body>
-  I guess {{ user }}'s profile would go here
+{% extends "base.html" %}
+{% block content %}
+  Hi {{ user }}!
 <tt>
   {{ user | pprint }}
-  </tt>
-</body>
+</tt>
+{% endblock content %}
