--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -12,11 +12,11 @@
   <body>
     <div>
     {% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Hello, {{ user }}</a>
+    Hello, {{ user }}.  <a href="{% url 'logout' %}">Log out</a>
     {% else %}
     <a href="{% url 'login' %}">Login</a>
     {% endif %}
-    <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
+    | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
     </div>
     <div id="content">
       {% block content %}{% endblock %}
