--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -16,7 +16,7 @@
     {% else %}
     <a href="{% url 'login' %}">Login</a>
     {% endif %}
-    | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
+    |<a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
     </div>
     <div id="content">
       {% block content %}{% endblock %}
