--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -11,6 +11,9 @@
 
   <body>
     <div>
+    |<a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
+    </div>
+    <div>
     {% if user.is_authenticated %}
     Hello, {{ user }}.  <form method="post" action="{% url 'logout' %}">
 {% csrf_token %}
@@ -21,7 +24,6 @@
     {% else %}
     <a href="{% url 'login' %}">Login</a>
     {% endif %}
-    |<a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
     </div>
     <div id="content">
       {% block content %}{% endblock %}
