--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -11,7 +11,7 @@
 
   <body>
     <div>
-    |<a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
+    <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:club' %}">Club</a> | <a href="{% url 'app:table' %}">Tables</a>
     </div>
     <div>
     {% if user.is_authenticated %}
