Shut up and deal

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -6,10 +6,8 @@ OK so like here's the complete table, Yo:
 
 <ul>
 {% for seat in table.ordered_seats %}
-<li>{{ seat.player.as_link }}</li>
+<li>{{ seat.player.as_link }} ({{ seat.cards }})</li>
 {% endfor %}
 </ul>
-
-I suppose there should be a "deal" button here or something.
 
 {% endblock content %}
