--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -3,6 +3,9 @@
 
 Player {{ object }}
 <br/>
+{% if show_cards %}
 Yer hand is {{ object.seat.cards }}
-
+{% else %}
+You're not {{ object.user.username }} so you don't get to see the cards.
+{% endif %}
 {% endblock content %}
