Don't try to show their cards if they're in the lobby

--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -3,9 +3,11 @@
 
 Player {{ object }}
 <br/>
-{% if show_cards %}
+{% if object.seat %}
+  {% if show_cards %}
 Yer hand is {{ object.seat.cards }}
-{% else %}
+  {% else %}
 You're not {{ object.user.username }} so you don't get to see the cards.
+  {% endif %}
 {% endif %}
 {% endblock content %}
