Let generate_fake_data work

--- a/project/app/templates/club.html
+++ b/project/app/templates/club.html
@@ -1,6 +1,7 @@
 {% extends "table_list.html" %}
 
 {% block before_list_stuff %}
+{# TODO -- maybe some "find player" search box #}
 <p>
   Lobby
 </p>
