Fix table detail

--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -4,9 +4,10 @@
 {% endblock before_list_stuff %}
 {% block table_list %}
 
+All the tables.
 <ul>
 {% for table in table_list %}
-<li>{{ table.as_link }}:</li>
+<li>{{ table.as_link }}</li>
 <ul>
 {% for seat in table.ordered_seats %}
 <li>{{ seat.player.as_link }}</li>
