Lots of template tweaks

--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -1,6 +1,6 @@
-{% extends "table_list.html" %}
+{% extends "base.html" %}
 
-{% block before_list_stuff %}
+{% block content %}
 {# TODO -- maybe some "find player" search box #}
 <p>
   Lobby
@@ -12,4 +12,4 @@
 {% endfor %}
 </ul>
 
-{% endblock before_list_stuff %}
+{% endblock content %}
