--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -15,7 +15,7 @@
     </div>
     <div>
     {% if user.is_authenticated %}
-    Hello, {{ user }}.  <form method="post" action="{% url 'logout' %}">
+    Hello, <a href="{% url 'app:player' %}">{{ user }}</a>.  <form method="post" action="{% url 'logout' %}">
 {% csrf_token %}
 <input type="submit" value="logout">
 <input type="hidden" name="next" value="/">
