--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -3,11 +3,9 @@
 
 Player {{ object }}
 <br/>
-{% if object.seat %}
-  {% if object.user.username in show_cards_for  %}
-Yer hand is {{ object.seat.cards }}
-  {% else %}
-You're not {{ object.user.username }} so you don't get to see the cards.
-  {% endif %}
+{% if my_table %}
+{{ my_table.as_link }}
+{% else %}
+You are in <a href="{% url 'app:lobby' %}">the lobby</a>.
 {% endif %}
 {% endblock content %}
