WIP: Random, untested thoughts for turning it into a dating app :-)

--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-Player {{ object }}
+Player {{ object }} {% if looking_for_partner %}is{% else %}is not{% endif %} looking for a partner.
 <br/>
 {% if my_table %}
 {{ my_table.as_link }}
