--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -12,6 +12,7 @@
   <body>
     <div>
     <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:lobby' %}">Lobby</a> | <a href="{% url 'app:table' %}">Tables</a>
+    | <a href="{% url 'app:players' %}">Players</a>
     </div>
     <div>
     {% if user.is_authenticated %}
