Make the Table model be nothing more than an ID

--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -5,7 +5,7 @@
 OK so like here's the complete table, Yo:
 
 <ul>
-{% for direction, player in table.players.items %}
+{% for direction, player in table.players_by_direction.items %}
 
 <li>
 {{ direction }}:
