Fix the dropdown's initial setting by:
* Rewriting PlayerListView as a function, not a class.
* randomly poking at shit
* simplifying whenever possible

--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -18,7 +18,7 @@ players.
 </ul>
 
 <div>
-<form method="get" action="{% url 'app:players' %}">
+<form method="post" action="{% url 'app:players' %}">
 {% csrf_token %}
 {{ form }}
 <input type="submit" value="filter">
