--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -5,7 +5,12 @@
 {# TODO -- use https://github.com/morlandi/django-ajax-datatable?tab=readme-ov-file #}
 {# specifically so that users can see who's looking for a partner, who's in the lobby, &c #}
 
-{% if filter is None %}All {% endif %}{{ player_list.count }} players.
+{% if extra_crap.total_count == extra_crap.filtered_count %}
+All {{ player_list.count }}
+{% else %}
+{{ extra_crap.filtered_count }} / {{ extra_crap.total_count }}
+{% endif %}
+players.
 <ul>
 {% for player in player_list %}
 <li>{{ player.as_link }}</li>
