--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -17,11 +17,17 @@ players.
 {% endfor %}
 </ul>
 
-<div>
+<div class="container">
+<div class="row row-cols-auto">
+<div class="col">
 <form method="post" action="{% url 'app:players' %}">
 {% csrf_token %}
 {{ form }}
+</div>
+<div class="col">
 <input type="submit" value="filter">
+</div>
+</div>
 </form>
 </div>
 
