Let one single player partner with another.
Laughably crude, but it seems to work, at first glance.

--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -11,7 +11,12 @@ Player {{ object }} is
 looking for a partner.
 {% if user.player.looking_for_partner and user.player != object %}
 Oh! I am too!
-TODO: include a "ME ME ME PICK ME" button.
+<form method="post" action="{% url 'app:player' object.id %}">
+{% csrf_token %}
+{{ form }}
+<input type="submit" value="Partner Me Up, Daddy-O">
+</form>
+
 {% endif %}
 {% else %}
 is partnered with {{ object.partner.as_link }}.
