Allow breaking up a partnership.
Seems to work at first glance, but we surely need some tests.

--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
+{# "user" is whoever is logged in. "object" is the player whose details we're examining. #}
 {% if user.player == object %}
 You are
 {% else %}
-Player {{ object }} is
+{{ object|title }} is
 {% endif %}
 
 {% if object.looking_for_partner %}
@@ -15,11 +16,20 @@ Oh! I am too!
 {% csrf_token %}
 {{ form }}
 <input type="submit" value="Partner Me Up, Daddy-O">
+<input type="hidden" name="action" value="partner">
 </form>
 
 {% endif %}
 {% else %}
-is partnered with {{ object.partner.as_link }}.
+partnered with {{ object.partner.as_link }}.
+{% if not user.player.looking_for_partner and user.player == object %}
+<form method="post" action="{% url 'app:player' object.id %}">
+{% csrf_token %}
+{{ form }}
+<input type="submit" value="Splitsville">
+<input type="hidden" name="action" value="breakup">
+</form>
+{% endif %}
 {% endif %}
 <br/>
 {% if object.table %}
