Describe a manual "test" that is failing

--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -16,7 +16,7 @@ Oh! I am too!
 {% csrf_token %}
 {{ form }}
 <input type="submit" value="Partner Me Up, Daddy-O">
-<input type="hidden" name="action" value="partner">
+<input type="hidden" name="action" value="partnerup">
 </form>
 
 {% endif %}
