--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -27,6 +27,17 @@
     |<a href="{% url 'login' %}">Login</a>
     {% endif %}
     </div>
+
+{% if messages %}
+<div>
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+</div>
+{% endif %}
+
     <div id="content">
       {% block content %}{% endblock %}
     </div>
