--- a/project/app/templates/signup.html
+++ b/project/app/templates/signup.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-{% if form.errors %}
-<p>You screwed up somehow</p>
-{% endif %}
+{% if not request.user.is_authenticated %}
 <div>
 <form method="post" action="{% url 'app:signup' %}">
 {% csrf_token %}
@@ -11,5 +9,7 @@
 <input type="hidden" name="next" value="{{ next }}">
 </form>
 </div>
-
+{% else %}
+Yer already logged in
+{% endif %}
 {% endblock content %}
