--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -42,5 +43,16 @@
       {% block content %}{% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="{% static 'django_eventstream/eventsource.min.js' %}"></script>
+    <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
+<script>
+var es = new ReconnectingEventSource('/events/');
+
+es.addEventListener('message', function (e) {
+    console.log(e.data);
+}, false);
+</script>
+<!-- yeah baby -->
+
   </body>
 </html>
