WIP -- trying to get a "bob just joined the lobby" message sent
Add a "send test message to the lobby" button -- it actually works!

--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -12,3 +12,12 @@
 </ul>
 
 {% endblock content %}
+{% block scripts %}
+<script>
+var es = new ReconnectingEventSource('/events/lobby/');
+
+es.addEventListener('message', function (e) {
+    console.log("A lobby message: " + e.data);
+}, false);
+</script>
+{% endblock %}
