--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -11,13 +11,45 @@
 {% endfor %}
 </ul>
 
+<div>
+<input type="text" id="outgoing-message"  />
+<button type="button" onclick='postTest(document.querySelector( "#outgoing-message" ).value)'>Send a test event to the lobby</button>
+</div>
+
 {% endblock content %}
 {% block scripts %}
 <script>
 var es = new ReconnectingEventSource('/events/lobby/');
 
 es.addEventListener('message', function (e) {
-    console.log("A lobby message: " + e.data);
+    console.log("A lobby message: " + JSON.parse(e.data).text);
 }, false);
-</script>
+
+// from https://docs.djangoproject.com/en/5.0/howto/csrf/#acquiring-the-token-if-csrf-use-sessions-and-csrf-cookie-httponly-are-false
+function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+const csrftoken = getCookie('csrftoken');
+
+
+window.postTest = function(message){
+    fetch("/send_test_message/", {
+  method: "POST",
+  headers: {'Content-Type': 'application/json', 'X-CSRFToken': csrftoken },
+  body: JSON.stringify({message: message})
+});
+  }
+  </script>
 {% endblock %}
