Persist the messages, and play them back when we load the page

--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -17,6 +17,9 @@
 </div>
 
 <div id="lobby-log">
+{% for message in lobbymessages %}
+{{ message.timestamp.isoformat }}: {{ message.player }} said {{ message.message }}<br>
+{% endfor %}
 </div>
 
 {% endblock content %}
