--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -16,10 +16,22 @@
 <button type="button" onclick='postLobbyMessage(document.querySelector( "#outgoing-message" ).value)'>Speak in the lobby</button>
 </div>
 
-<div id="lobby-log">
+<div>
+Chat Log
+<table id="lobby-log">
+<tr>
+<th scope="col">When</th>
+<th scope="col">Who</th>
+<th scope="col">What</th>
+</tr>
 {% for message in lobbymessages %}
-{{ message.timestamp.isoformat }}: {{ message.player }} said {{ message.message }}<br>
+<tr>
+<td> {{ message.timestamp.isoformat }} </td>
+<td> {{ message.player }} </td>
+<td> {{ message.message }} </td>
+</tr>
 {% endfor %}
+</table>
 </div>
 
 {% endblock content %}
@@ -28,8 +40,24 @@
 var es = new ReconnectingEventSource('/events/lobby/');
 
 es.addEventListener('message', function (e) {
-    var theMessage = JSON.parse(e.data).text;
-    document.querySelector( "#lobby-log" ).append(theMessage, document.createElement("br"));
+    var parsed = JSON.parse(e.data)
+    var newRow = document.createElement("tr");
+
+    var newDatum;
+
+    newDatum = document.createElement("td");
+    newDatum.append(parsed.when);
+    newRow.append(newDatum);
+
+    newDatum = document.createElement("td");
+    newDatum.append(parsed.who);
+    newRow.append(newDatum);
+
+    newDatum = document.createElement("td");
+    newDatum.append(parsed.what);
+    newRow.append(newDatum);
+
+    document.querySelector( "#lobby-log" ).append(newRow);
 }, false);
 
 // from https://docs.djangoproject.com/en/5.0/howto/csrf/#acquiring-the-token-if-csrf-use-sessions-and-csrf-cookie-httponly-are-false
