--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -1,42 +1,36 @@
 {% extends "base.html" %}
-
 {% block content %}
-<p>
-  Lobby
-</p>
-
-<ul>
-{% for player in lobby %}
-<li>{{ player.as_link }}</li>
-{% endfor %}
-</ul>
-
-<div>
-<input type="text" id="outgoing-message"  />
-<button type="button" onclick='postLobbyMessage(document.querySelector( "#outgoing-message" ).value)'>Speak in the lobby</button>
-</div>
-
-<div>
-Chat Log
-<table id="lobby-log">
-<tr>
-<th scope="col">When</th>
-<th scope="col">Who</th>
-<th scope="col">What</th>
-</tr>
-{% for message in lobbymessages %}
-<tr>
-<td> {{ message.timestamp.isoformat }} </td>
-<td> {{ message.player }} </td>
-<td> {{ message.message }} </td>
-</tr>
-{% endfor %}
-</table>
-</div>
-
+    <p>Lobby</p>
+    <ul>
+        {% for player in lobby %}<li>{{ player.as_link }}</li>{% endfor %}
+    </ul>
+    <div>
+        <input type="text" id="outgoing-message" />
+        <button type="button"
+                onclick='postLobbyMessage(document.querySelector( "#outgoing-message" ).value)'>
+            Speak in the lobby
+        </button>
+    </div>
+    <div>
+        Chat Log
+        <table id="lobby-log">
+            <tr>
+                <th scope="col">When</th>
+                <th scope="col">Who</th>
+                <th scope="col">What</th>
+            </tr>
+            {% for message in lobbymessages %}
+                <tr>
+                    <td>{{ message.timestamp.isoformat }}</td>
+                    <td>{{ message.player }}</td>
+                    <td>{{ message.message }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock content %}
 {% block scripts %}
-<script>
+    <script>
 var es = new ReconnectingEventSource('/events/lobby/');
 
 es.addEventListener('message', function (e) {
@@ -60,25 +54,6 @@ es.addEventListener('message', function (e) {
     document.querySelector( "#lobby-log" ).append(newRow);
 }, false);
 
-// from https://docs.djangoproject.com/en/5.0/howto/csrf/#acquiring-the-token-if-csrf-use-sessions-and-csrf-cookie-httponly-are-false
-function getCookie(name) {
-    let cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        const cookies = document.cookie.split(';');
-        for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-}
-const csrftoken = getCookie('csrftoken');
-
-
 window.postLobbyMessage = function(message){
     fetch("/send_lobby_message/", {
   method: "POST",
@@ -86,5 +61,5 @@ window.postLobbyMessage = function(message){
   body: JSON.stringify({message: message})
 });
   }
-  </script>
+    </script>
 {% endblock %}
