--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -18,14 +18,28 @@
         partnered with {{ player.partner | styled_link:me }}.
         {% if not me.looking_for_partner and me.partner == player %}
             <div>
-            <form method="post" action="{% url 'app:player' player.id %}">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Splitsville">
-            </form>
+                <form method="post" action="{% url 'app:player' player.id %}">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Splitsville">
+                </form>
             </div>
             <div>
-              Imagine a chat window here where you could talk to {{ player | styled_link:me }}
+                Chat Log
+                <table id="partner-chat-log">
+                    <tr>
+                        <th scope="col">When</th>
+                        <th scope="col">Who</th>
+                        <th scope="col">What</th>
+                    </tr>
+                    {% for message in lobbymessages %}
+                        <tr>
+                            <td>{{ message.timestamp.isoformat }}</td>
+                            <td>{{ message.player }}</td>
+                            <td>{{ message.message }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
             </div>
         {% endif %}
     {% endif %}
@@ -41,3 +55,37 @@
         are in <a href="{% url 'app:lobby' %}">the lobby</a>.
     {% endif %}
 {% endblock content %}
+{% block scripts %}
+    <script>
+var es = new ReconnectingEventSource('/events/player/' + {{ channel_name }} + "/");
+
+es.addEventListener('message', function (e) {
+    var parsed = JSON.parse(e.data)
+    var newRow = document.createElement("tr");
+
+    var newDatum;
+
+    newDatum = document.createElement("td");
+    newDatum.append(parsed.when);
+    newRow.append(newDatum);
+
+    newDatum = document.createElement("td");
+    newDatum.append(parsed.who);
+    newRow.append(newDatum);
+
+    newDatum = document.createElement("td");
+    newDatum.append(parsed.what);
+    newRow.append(newDatum);
+
+    document.querySelector( "#partner-chat-log" ).append(newRow);
+}, false);
+
+window.postLobbyMessage = function(message){
+    fetch("/send_player_message/" + {{ player.pk }}, {
+  method: "POST",
+  headers: {'Content-Type': 'application/json', 'X-CSRFToken': csrftoken },
+  body: JSON.stringify({message: message})
+});
+  }
+    </script>
+{% endblock scripts %}
